--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": false,
   "name": "x5-modal",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "A lightweight modal plugin for Vue",
   "main": "dist",
   "scripts": {
@@ -39,6 +39,7 @@
     "style-loader": "^1.1.3",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.0",
+    "vue-router": "^3.1.6",
     "vue-template-compiler": "^2.6.11",
     "vuex": "^3.1.3",
     "webpack": "^4.42.0",
