--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "dryrun": "rimraf dist && webpack && npx publish --dry-run",
     "deploy": "rimraf dist && webpack && npx publish"
   },
   "main": "dist",
