--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "x5-modal",
-  "version": "0.5.4",
+  "version": "0.5.5",
   "private": false,
   "description": "A lightweight modal plugin for Vue",
   "author": "Keagan Chisnall",
@@ -15,25 +15,25 @@
     "dist"
   ],
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.4.1",
-    "@vue/cli-plugin-eslint": "~4.4.1",
-    "@vue/cli-plugin-vuex": "^4.4.1",
-    "@vue/cli-service": "^4.4.1",
+    "@vue/cli-plugin-babel": "^4.4.6",
+    "@vue/cli-plugin-eslint": "^4.4.6",
+    "@vue/cli-plugin-vuex": "^4.4.6",
+    "@vue/cli-service": "^4.4.6",
     "babel-eslint": "^10.1.0",
     "core-js": "^3.6.5",
-    "css-loader": "^3.5.3",
-    "eslint": "^7.2.0",
+    "css-loader": "^3.6.0",
+    "eslint": "^7.6.0",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "vue": "^2.6.11",
-    "vue-loader": "^15.9.2",
-    "vue-router": "^3.3.2",
+    "vue-loader": "^15.9.3",
+    "vue-router": "^3.3.4",
     "vue-template-compiler": "^2.6.11",
-    "vuex": "^3.4.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "vuex": "^3.5.1",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   },
   "bugs": {
     "url": "https://github.com/xon52/x5-modal/issues"
